2009-09-19  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #12005: Reports don't have a back reference to the reports module

2009-09-19  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11917: TCEforms suggest fails with empty label or label_alt field (thanks to Andreas Wolf)
	* Fixed bug #11988: Extension Manager is not translatable (part 6) (thanks to Christopher Stelmaszyk)
	* Fixed bug #11986: dynamic update of translation status im EM is broken

2009-09-18  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase version to 0.9.7 so it works with the caching framework adjustments.

2009-09-18  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11990: Optimize output of TCEforms suggest results (thanks to Steffen Gebert)
	* Fixed bug #11505: TYPO3 4.3 is slower than 4.2 -> re-implement native db caching and make the
		use of the caching framework configurable. !!! DB update required
	* Follow-up to bug #11505: removed superfluous fields from caching framework tables, fixed indizes

2009-09-18  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #11831: Removed reference operator from an object
	* Follow-up to bug #11505: Extended the checks whether the caching framework was initialized before
	* Raised DBAL version from 0.9.20 to 0.9.21

2009-09-18  Ingo Renner  <ingo@typo3.org>

	* Added feature #11843: Add a reports module
	* Follow-up to #11843: Lists in statuses didn't look too good due to top margin

2009-09-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11970: RTE in quickedit mode (page module) is broken
	* Fixed bug #11996: Change compreed to compress with adding JS/CSS
	* Follow-up to bug #11985: Move ExtJs CSS-assignment to renderJsKibraries
	* Follow-up to bug #11985: backPath in FE is set too late

2009-09-17  Steffen Kamper  <info@sk-typo3.de>

	* Cleanup #11991: Cleanup TCEforms suggest CSS
	* Fixed bug #11396: redirects not working for felogin on pages with access set
	* Follow-up to bug #11985: corrected calls loadScriptaculous() in tceforms
